--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -9,7 +9,7 @@ body{
 /* 共通 */
 
 .login-container{
-	width:320px;
+	width:800px;
 	background-color:#d3d3d3;
 	padding:24px;
 	margin:80px auto;
@@ -24,7 +24,7 @@ body{
 	text-align:center;
 	margin-bottom:20px;
 	color: #333;
-	font-size:20px;
+	font-size:30px;
 }
 
 .input-field{
@@ -34,7 +34,7 @@ body{
 	border:1px solid #ccc;
 	border-radius:6px;
 	box-sizing: border-box;
-	font-size:14px;
+	font-size:20px;
 }
 
 /* ボタンの設定  */
@@ -111,7 +111,7 @@ a{
 	text-decoration:none;
 	color: #183883;
 	margin:10px 0;
-	font-size:14px;
+	font-size:20px;
 }
 
 a:hover{
@@ -146,7 +146,11 @@ th{
 td{
 	position:relative;
 	vertical-align:top;
-	padding:4px;
+	padding:6px;
+	width:120px;
+	height:100px;
+	box-sizing: border-box;
+
 }
 
 td:empty{
@@ -172,6 +176,23 @@ td:has(:contains("未登録")){
 	text-align:center;
 	font-size:16px;
 	font-weight:bold;
+}
+.time-dropdown{
+	display: none; /* 初期は非表示 */
+	 margin-top: 6px;
+	 width: 100%;
+	 padding: 6px;
+	 font-size: 13px;
+	 border: 1px solid #ccc;
+	 border-radius: 4px;
+	 background-color: #fff;
+	 box-sizing: border-box;
+	 transition: all 0.3s ease;
+
+}
+.time-dropdown,
+.shift-select{
+	display:flex;
 }
 
 /* ナビゲーション */
